Implement project model types and enhance project listing functionality

--- a/frontend/src/app/component/project-list/project-list.component.html
+++ b/frontend/src/app/component/project-list/project-list.component.html
@@ -1,2 +1,3 @@
-<p>project-list works!</p>
-<app-project-card></app-project-card>
+<div *ngFor="let project of projectsArray">
+  <app-project-card [project]="project"></app-project-card>
+</div>
