--- a/frontend/src/app/component/project-card/project-card.component.html
+++ b/frontend/src/app/component/project-card/project-card.component.html
@@ -1,1 +1,4 @@
-<p>project-card works!</p>
+<div class="project-card" (click)="onCardClick()">
+  <h3>{{ project.title }}</h3>
+  <p>{{ project.description }}</p>
+</div>
