--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -1,3 +1,3 @@
 <!-- <p>landing-page works!</p> -->
-<app-project-list></app-project-list>
+<app-project-list [projectsArray]="projectThumbnail()"></app-project-list>
 <app-move-avatar></app-move-avatar>
