--- a/frontend/src/app/component/toggle-link-button/toggle-link-button.component.html
+++ b/frontend/src/app/component/toggle-link-button/toggle-link-button.component.html
@@ -1,1 +1,8 @@
-<p>toggle-link-button works!</p>
+<button
+  [ngStyle]="{
+    'background-color': buttonColor === 'black' ? 'black' : 'transparent'
+  }"
+  [style.display]="buttonColor === 'not-show' ? 'none' : 'inline-block'"
+>
+  <a href="{{ linkPath }}" target="_blank">{{ buttonText }}</a>
+</button>
