--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -1,3 +1,4 @@
-<!-- <p>landing-page works!</p> -->
-<app-project-list [projectsArray]="projectThumbnail()"></app-project-list>
-<app-move-avatar></app-move-avatar>
+<div id="landing">
+  <app-move-avatar></app-move-avatar>
+  <app-project-list [projectsArray]="projectThumbnail()"></app-project-list>
+</div>
