--- a/frontend/src/app/component/project-list/project-list.component.html
+++ b/frontend/src/app/component/project-list/project-list.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let project of projectsArray">
+<div *ngFor="let project of projectsArray" id="project-list">
   <app-project-card [project]="project"></app-project-card>
 </div>
