--- a/frontend/src/app/component/project-list/project-list.component.css
+++ b/frontend/src/app/component/project-list/project-list.component.css
@@ -1,5 +1,51 @@
 #project-list {
   z-index: 1;
   position: relative;
-  width: 85%;
+  width: 80%;
+}
+
+.card-container {
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s, box-shadow 0.2s;
+  width: 80%;
+}
+
+.card-container:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.pagination-controls {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  width: 80%;
+}
+
+.pagination-controls button {
+  padding: 10px 20px;
+  border: none;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.2s;
+  margin: 0 5px;
+}
+
+.pagination-controls button.active {
+  background-color: #0056b3;
+}
+
+.pagination-controls button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.pagination-controls button:hover:not(.active) {
+  background-color: #0056b3;
 }
