--- a/frontend/src/app/component/project-card/project-card.component.css
+++ b/frontend/src/app/component/project-card/project-card.component.css
@@ -1,5 +1,18 @@
 .project-card {
   z-index: 1;
   position: relative;
-  /* width: 75%; */
+  padding: 16px;
+}
+
+.project-title {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.project-description {
+  font-size: 1.2em;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
