--- a/frontend/src/app/component/project-card/project-card.component.html
+++ b/frontend/src/app/component/project-card/project-card.component.html
@@ -1,4 +1,4 @@
 <div class="project-card" (click)="onCardClick()">
-  <h3>{{ project.title }}</h3>
-  <p>{{ project.description }}</p>
+  <h3 class="project-title">{{ project.title }}</h3>
+  <p class="project-description">{{ project.description }}</p>
 </div>
