--- a/frontend/src/app/component/project-list/project-list.component.css
+++ b/frontend/src/app/component/project-list/project-list.component.css
@@ -23,29 +23,30 @@
   display: flex;
   justify-content: center;
   margin-top: 20px;
-  width: 80%;
+  width: 65%;
 }
 
 .pagination-controls button {
   padding: 10px 20px;
-  border: none;
-  background-color: #007bff;
-  color: white;
+  background-color: transparent;
+  color: #007bff;
   cursor: pointer;
   border-radius: 5px;
-  transition: background-color 0.2s;
+  transition: color 0.2s, background-color 0.2s;
   margin: 0 5px;
 }
 
 .pagination-controls button.active {
-  background-color: #0056b3;
+  color: white;
+  background-color: #007bff;
 }
 
 .pagination-controls button:disabled {
-  background-color: #ccc;
+  color: #ccc;
   cursor: not-allowed;
 }
 
 .pagination-controls button:hover:not(.active) {
-  background-color: #0056b3;
+  color: #0056b3;
+  background-color: rgba(0, 123, 255, 0.1);
 }
