--- a/frontend/src/app/component/project-list/project-list.component.css
+++ b/frontend/src/app/component/project-list/project-list.component.css
@@ -29,16 +29,17 @@
 .pagination-controls button {
   padding: 10px 20px;
   background-color: transparent;
-  color: #007bff;
+  color: black;
   cursor: pointer;
   border-radius: 5px;
+  border: none;
   transition: color 0.2s, background-color 0.2s;
   margin: 0 5px;
 }
 
 .pagination-controls button.active {
-  color: white;
-  background-color: #007bff;
+  color: black;
+  background-color: #bbb;
 }
 
 .pagination-controls button:disabled {
