Add responsive behavior to landing page; conditionally render avatar based on screen width

--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,6 @@
 <div id="landing">
-  <app-move-avatar></app-move-avatar>
+  <ng-container *ngIf="isWideScreen()">
+    <app-move-avatar></app-move-avatar>
+  </ng-container>
   <app-project-list [projectsArray]="projectThumbnail()"></app-project-list>
 </div>
