Enhance project list layout for responsiveness; adjust card container width and implement dynamic project display based on window size

--- a/frontend/src/app/component/project-list/project-list.component.css
+++ b/frontend/src/app/component/project-list/project-list.component.css
@@ -1,17 +1,43 @@
+#project-list-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #project-list {
   z-index: 1;
   position: relative;
   width: 80%;
 }
 
+@media (max-width: 768px) {
+  #project-list {
+    margin: 0 auto;
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 769px) {
+  #project-list {
+    font-size: 16px;
+  }
+}
+
 .card-container {
-  margin: 10px;
+  margin: 10px auto;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s, box-shadow 0.2s;
-  width: 80%;
+  width: 100%;
+}
+
+@media (min-width: 769px) {
+  .card-container {
+    width: 80%;
+    margin: 10px auto;
+  }
 }
 
 .card-container:hover {
@@ -23,7 +49,7 @@
   display: flex;
   justify-content: center;
   margin-top: 20px;
-  width: 65%;
+  width: 100%;
 }
 
 .pagination-controls button {
