--- a/frontend/src/app/component/project-list/project-list.component.html
+++ b/frontend/src/app/component/project-list/project-list.component.html
@@ -1,14 +1,16 @@
-<div *ngFor="let project of paginatedProjects" id="project-list">
-  <div class="card-container">
-    <app-project-card [project]="project"></app-project-card>
+<div id="project-list-container">
+  <div *ngFor="let project of paginatedProjects" id="project-list">
+    <div class="card-container">
+      <app-project-card [project]="project"></app-project-card>
+    </div>
   </div>
-</div>
-<div class="pagination-controls">
-  <button
-    *ngFor="let page of [].constructor(totalPages); let i = index"
-    (click)="setPage(i + 1)"
-    [class.active]="currentPage === i + 1"
-  >
-    {{ i + 1 }}
-  </button>
+  <div *ngIf="totalPages > 1" class="pagination-controls">
+    <button
+      *ngFor="let page of [].constructor(totalPages); let i = index"
+      (click)="setPage(i + 1)"
+      [class.active]="currentPage === i + 1"
+    >
+      {{ i + 1 }}
+    </button>
+  </div>
 </div>
