--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -1,6 +1,11 @@
 #landing {
   position: relative;
   display: flex;
-  justify-content: center;
   margin-top: 20px;
+}
+
+@media (max-width: 768px) {
+  #landing {
+    justify-content: center;
+  }
 }
