--- a/frontend/src/app/about-me-page/about-me-page.component.html
+++ b/frontend/src/app/about-me-page/about-me-page.component.html
@@ -10,8 +10,12 @@
       class="profile-image"
     />
   </figure>
-  <h2 class="interest_message">Seeking Software Engineering Internship</h2>
-  <h2 class="interest_message">to leverage AI, web, and IoT experience.</h2>
+  <div class="interest_message_container">
+    <h2 class="interest_message">
+      Seeking Software Engineering Internship to leverage AI, web, and IoT
+      experience.
+    </h2>
+  </div>
 </div>
 <div id="description">
   <p>
