--- a/frontend/src/app/component/link-button/link-button.component.css
+++ b/frontend/src/app/component/link-button/link-button.component.css
@@ -40,3 +40,7 @@ button.borderless {
   border: none;
   padding: 15px 30px; /* Ensure padding is applied even when borderless */
 }
+
+button.fullWidth {
+  width: 100%;
+}
