--- a/frontend/src/app/component/link-button/link-button.component.html
+++ b/frontend/src/app/component/link-button/link-button.component.html
@@ -1,13 +1,21 @@
 <button
   *ngIf="isExternal; else internalLink"
-  [ngClass]="[buttonStyle, borderless ? 'borderless' : '']"
+  [ngClass]="[
+    buttonStyle,
+    borderless ? 'borderless' : '',
+    fullWidth ? 'fullWidth' : ''
+  ]"
 >
   <a [href]="linkPath" target="_blank">{{ buttonText }}</a>
 </button>
 <ng-template #internalLink>
   <button
     [routerLink]="linkPath"
-    [ngClass]="[buttonStyle, borderless ? 'borderless' : '']"
+    [ngClass]="[
+      buttonStyle,
+      borderless ? 'borderless' : '',
+      fullWidth ? 'fullWidth' : ''
+    ]"
   >
     {{ buttonText }}
   </button>
